--- a/src/main/java/com/tyler/TwitterBotGUI.form
+++ b/src/main/java/com/tyler/TwitterBotGUI.form
@@ -50,7 +50,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Status Update"/>
+          <text value="New Status"/>
         </properties>
       </component>
       <component id="a0f7e" class="javax.swing.JTextField" binding="txtFieldStatusUpdate">
@@ -66,7 +66,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Post that status update"/>
+          <text value="Update Status"/>
         </properties>
       </component>
       <component id="a758a" class="javax.swing.JLabel" binding="infoLabel">
@@ -83,6 +83,14 @@
         </constraints>
         <properties>
           <text value="Database Statuses"/>
+        </properties>
+      </component>
+      <component id="3c455" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="@FFantasyBot"/>
         </properties>
       </component>
     </children>
